# lrclibapi

./: .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  LICENCE  README.md  pyproject.toml  readthedocs.yml  tox.ini
.github/workflows/: pypi-publish.yaml  tests.yaml
docs/: conf.py  index.rst  lrclib.rst  lrclibapi.rst  make.bat  modules.rst
docs/examples/: fetch_lyrics.ipynb  index.rst
lrclib/: __init__.py  api.py  cryptographic_challenge_solver.py  exceptions.py  models.py
lrclibapi/: __init__.py  api.py  exceptions.py  models.py
tests/: test_api_models.py  test_api_with_mock.py  test_api_with_vcr.py  test_crypto_solver.py  test_errors_with_mock.py  test_models.py
tests/fixtures/cassettes/: test_get_lyrics  test_get_lyrics_by_id  test_not_found  test_request_challenge  test_search_with_fields  test_search_with_query
