[project]
name = "lrclibapi"
version = "0.3.1"
description = "python wrapper for the lrclib.net api"
authors = [{ name = "Dr-Blank", email = "64108942+Dr-Blank@users.noreply.github.com" }]
requires-python = ">=3.9.22,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "lrclib",
    "lrclib.net",
    "lrclib.net api",
    "lrclib.net python",
    "lrclib.net python api",
    "lrclib.net python wrapper",
    "synced lyrics",
    "synced lyrics api",
    "synced lyrics python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = ["requests>=2.31.0,<3"]

[project.urls]
Homepage = "https://github.com/Dr-Blank/lrclibapi"
Repository = "https://github.com/Dr-Blank/lrclibapi"

[dependency-groups]
dev = [
    "pylint>=2.17.6,<3",
    "pytest>=7.4.2,<8",
    "black>=23.9.1,<24",
    "pre-commit>=3.4.0,<4",
    "pytest-cov>=4.1.0,<5",
    "flake8>=6.1.0,<7",
    "tox>=4.11.3,<5",
    "wrapt>=1.15.0,<2",
    "dill>=0.3.7,<0.4",
    "mypy>=1.5.1,<2",
    "vcrpy>=7.0.0,<8",
    "types-requests>=2.31.0,<3",
]
docs = [
    "sphinx-rtd-theme>=1.3.0,<2",
    "nbsphinx>=0.9.3,<0.10",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[tool.hatch.build.targets.sdist]
include = ["./lrclibapi"]

[tool.hatch.build.targets.wheel]
include = ["./lrclibapi"]

[tool.hatch.build.targets.wheel.sources]
"./lrclibapi" = "lrclibapi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
