[project]
name = "lrclibapi"
version = "0.3.1"
description = "python wrapper for the lrclib.net api"
authors = [{ name = "Dr-Blank", email = "64108942+Dr-Blank@users.noreply.github.com" }]
requires-python = ">=3.9.22,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "lrclib",
    "lrclib.net",
    "lrclib.net api",
    "lrclib.net python",
    "lrclib.net python api",
    "lrclib.net python wrapper",
    "synced lyrics",
    "synced lyrics api",
    "synced lyrics python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = ["requests>=2.32.4,<3"]

[project.urls]
Homepage = "https://github.com/Dr-Blank/lrclibapi"
Repository = "https://github.com/Dr-Blank/lrclibapi"

[dependency-groups]
dev = [
    "pylint>=3.3.7,<4",
    "pytest>=8.4.1,<9",
    "black>=23.9.1,<24",
    "pre-commit>=3.4.0,<4",
    "pytest-cov>=6.2.1,<7",
    "flake8>=6.1.0,<7",
    "tox>=4.28.4,<5",
    "wrapt>=1.15.0,<2",
    "dill>=0.3.7,<0.4",
    "mypy>=1.5.1,<2",
    "vcrpy>=7.0.0,<8",
]
docs = [
    "sphinx-rtd-theme>=3.0.2,<4",
    "nbsphinx>=0.9.7,<0.10",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[tool.hatch.build.targets.sdist]
include = ["./lrclibapi"]

[tool.hatch.build.targets.wheel]
include = ["./lrclibapi"]

[tool.hatch.build.targets.wheel.sources]
"./lrclibapi" = "lrclibapi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
